bug fix masthead spacing
related to https://github.com/mrbmc/mrbmc/commit/0511bba814703b2696fbda3bc1c6a719db663631

--- a/src/_scss/_masthead.scss
+++ b/src/_scss/_masthead.scss
@@ -18,6 +18,7 @@
     h1,h2,h3 {
         color: $well-bold-color;
         z-index: 2;
+        margin-top: 0;
     }
     a {
         color: $well-bold-color;
